# remo-broker

./: CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md  REMO_HANDOFF.md  deny.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  soak.yml
benches/: latency.rs
ci/: measure_nfr.sh
docs/: binary-size.md  manifest-schema.md  wire-protocol.md
examples/: killtest.rs  soak.rs
packaging/: README.md
packaging/systemd/: remo-broker.service
packaging/sysusers.d/: remo-broker.conf
packaging/tmpfiles.d/: remo-broker.conf
schema/: remo-broker.v1.json
specs/001-broker-daemon/: spec.md
specs/002-laptop-push-secrets/: spec.md
src/: audit.rs  backend.rs  bootstrap.rs  cache.rs  config.rs  lib.rs  main.rs  manifest.rs  registry.rs  server.rs
src/proto/: admin.rs  mod.rs  project.rs
