[package]
name = "remo-broker"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
description = "On-instance credential broker daemon for Remo. Holds a per-instance bootstrap token and serves per-project Unix sockets with allowlist enforcement."
license = "MIT"
repository = "https://github.com/get2knowio/remo-broker"
readme = "README.md"
keywords = ["secrets", "credentials", "broker", "daemon"]
categories = ["command-line-utilities", "authentication"]

[[bin]]
name = "remo-broker"
path = "src/main.rs"

[dependencies]
anyhow = "1"
arc-swap = "1"
clap = { version = "4", features = ["derive", "env"] }
# FR-004/FR-005: the only backend integration. The broker never touches
# 1Password/Vault/AWS/age/keychain SDKs directly; everything goes through
# fnox-core's resolver. Cheap-clone Fnox is shared across project handlers
# via Arc<ArcSwap<Fnox>> so rotate-bootstrap can swap it atomically. See
# deny.toml for the (documented) advisories this dep tree introduces.
fnox-core = "1.25"
sd-notify = "0.4"
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["serde-well-known", "formatting", "parsing", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "sync", "time", "fs", "io-util"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# JSON Schema artifact generation (FR-010 / manifest-schema.md
# "Compatibility commitments"). Off by default so the production
# binary doesn't link schemars; enabled in CI to regenerate +
# snapshot-test `schema/remo-broker.v1.json`.
schemars = { version = "0.8", optional = true }

[features]
default = []
schema-gen = ["dep:schemars"]

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
